@@ -2006,7 +2006,9 @@ class ParserElement(ABC):
         full_dump: bool = True,
         print_results: bool = True,
         failure_tests: bool = False,
-        post_parse: typing.Optional[Callable[[str, ParseResults], typing.Optional[str]]] = None,
+        post_parse: typing.Optional[
+            Callable[[str, ParseResults], typing.Optional[str]]
+        ] = None,
         file: typing.Optional[TextIO] = None,
         with_line_numbers: bool = False,
         *,
@@ -2014,7 +2016,9 @@ class ParserElement(ABC):
         fullDump: bool = True,
         printResults: bool = True,
         failureTests: bool = False,
-        postParse: typing.Optional[Callable[[str, ParseResults], typing.Optional[str]]] = None,
+        postParse: typing.Optional[
+            Callable[[str, ParseResults], typing.Optional[str]]
+        ] = None,
     ) -> Tuple[bool, List[Tuple[str, Union[ParseResults, Exception]]]]:
         """
         Execute the parse expression on a series of test strings, showing each
@@ -5889,7 +5893,9 @@ def trace_parse_action(f: ParseAction) -> ParseAction:
         try:
             ret = f(*paArgs)
         except Exception as exc:
-            sys.stderr.write(f"<<leaving {thisFunc} (exception: {exc})\n")
+            sys.stderr.write(
+                f"<<leaving {thisFunc} (exception: {type(exc).__name__}: {exc})\n"
+            )
             raise
         sys.stderr.write(f"<<leaving {thisFunc} (ret: {ret!r})\n")
         return ret
